--- a/drivers/iio/light/Kconfig
+++ b/drivers/iio/light/Kconfig
@@ -334,6 +334,16 @@ config LTR501
 	  This driver can also be built as a module.  If so, the module
 	  will be called ltr501.
 
+config LTRF216A
+	tristate "LTR-F216A light sensor"
+	depends on I2C
+	help
+	  If you say yes here you get support for the Lite-On LTR-F216A
+	  ambient light and proximity sensor.
+
+	  This driver can also be built as a module.  If so, the module
+	  will be called ltrf216a.
+
 config LV0104CS
 	tristate "LV0104CS Ambient Light Sensor"
 	depends on I2C
